[tool.poetry]
name = "template-reconstruction"
version = "0.1.0"
description = ""
authors = ["flyingpalli <paskal.thomas@t-online.de>"]
readme = "README.md"

[tool.flake8]
extend-ignore = ["E203", "E266", "E501", "W503"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
duckdb = "^1.1.3"
numpy = "^2.2.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
